2010-03-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_emit_prologue): Omit issuing a dynamic
	stack check if the mask would be zero.

2010-03-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2009-06-16  J"orn Rennecke  <joern.rennecke@arc.com>
		    Janis Johnson  <janis187@us.ibm.com>

	PR target/39254
	* config/rs6000/rs6000.c (rs6000_emit_move): Don't emit a USE
	for the symbol ref of a constant that is the source of a move
	- nor for any other not-obvious-label-ref constants.

2010-03-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42113
	* config/alpha/alpha.md (*cmp_sadd_si): Change mode
	of scratch register to DImode.  Split to DImode comparison operator.
	Use SImode subreg of scratch register in the multiplication.
	(*cmp_sadd_sidi): Ditto.
	(*cmp_ssub_si): Ditto.
	(*cmp_ssub_sidi): Ditto.

2010-03-27  Joseph Myers  <joseph@codesourcery.com>

	PR c/43381
	* c-decl.c (get_parm_info): Assert that decl going in OTHERS has a
	nested binding iff it is a FUNCTION_DECL.
	(store_parm_decls_newstyle): Pass nested=true to bind for
	FUNCTION_DECLs amongst parameters.

2010-03-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/43385
	* gimplify.c (gimple_boolify): Only recurse on __builtin_expect
	argument if the argument is truth_value_p.

2010-03-23  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline:
	2010-01-08  DJ Delorie  <dj@redhat.com>

	* config/sh/sh.c (sh_expand_epilogue): Fix interrupt handler
	register popping order.

2010-03-22  James E. Wilson  <wilson@codesourcery.com>

	PR target/43348
	* ia64.md (call_nogp, call_value_nogp, sibcall_nogp, call_gp,
	call_value_gp,sibcall_gp): Use 's' constraint not 'i'.

2010-03-22  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2010-03-19  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43415
	* tree-ssa-pre.c (phi_translate): Split out worker to ...
	(phi_translate_1): ... this.
	(phi_translate): Move all caching here.  Cache all NARY