@@ -1,3 +1,8 @@
+2010-03-31  Jie Zhang  <jie@codesourcery.com>
+
+	PR 43562
+	* gcc.dg/pr43562.c: New test.
+
 2010-03-30  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/43409
